added many changes

--- a/website-and-css/supertramp.html
+++ b/website-and-css/supertramp.html
@@ -3,19 +3,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, inital-scale=1.0">
-    <link rel="stylesheet" href="clear.css">
+    <!-- <link rel="stylesheet" href="clear.css"> -->
         <link rel="stylesheet" href="rock.css">
   <!-- <title>HTML example</title> -->
 </head>
 
 <body>
-    <header>My Current Favorite Songs:</header>
+    
+    <div class="all">
+        <div class="titlefont">
+            <header>My Current Favorite Songs:</header>
+        </div>
 
-    <ol>
-        <li>"Asylum" by Supertramp</li>
-        <li>"If Everyone Was Listening" by Supertramp</li>
-        <li>"The Man in My Shoes" by Stingray</li>
-    </ol>
+        <div class="list">
+            <a href="https://www.youtube.com/watch?v=-KQ8iqGpwHY"; target="_blank">"If Everyone Was Listening" by Supertramp</a>
+            <a href="https://www.youtube.com/embed/w1gPg1c4S40"; target="_blank">"Asylum" by Supertramp</a>
+            <a href="https://www.youtube.com/embed/4Yri-Sz-YDI"; target="_blank">"The Man in My Shoes" by Stingray</a>
+        </div>
+    </div>
+
+    <!-- All Youtube Embeds -->
+    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=-KQ8iqGpwHY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/w1gPg1c4S40" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/4Yri-Sz-YDI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </body>
 
